--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -7,10 +7,10 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center_horizontal"
-    android:background="@drawable/diego_ph"
+    android:background="@color/white"
     android:orientation="horizontal">
 
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/Constraint1"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
@@ -23,16 +23,17 @@
 
         <ImageView
             android:id="@+id/logo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8.0dip"
+            android:layout_width="406dp"
+            android:layout_height="294dp"
             android:layout_marginStart="8.0dip"
+            android:layout_marginEnd="8.0dip"
             android:contentDescription="@string/Logo"
             android:src="@drawable/logo"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -121,7 +122,7 @@
 
         <CheckBox
             android:id="@+id/rememberMe"
-            android:text="@string/RememberMe"
+            android:text="Recordar email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
