--- a/app/src/main/res/layout/articulos_row.xml
+++ b/app/src/main/res/layout/articulos_row.xml
@@ -16,7 +16,7 @@
             android:layout_width="73dp"
             android:layout_height="73dp"
 
-
+            android:layout_marginLeft="10dp"
             tools:srcCompat="@drawable/platano" />
 
         <TextView
@@ -24,6 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:layout_marginLeft="5dp"
             android:layout_gravity="center"
             android:text="TextView" />
 
@@ -32,6 +33,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:layout_marginRight="15dp"
+            android:textAlignment="textEnd"
             android:layout_weight="1"
             android:text="TextView" />
 
